--- a/brigadeiro.css
+++ b/brigadeiro.css
@@ -1,63 +1,74 @@
+body {
+    margin: 0;
+}
 
 .main-image {
     width: 100%;
     position: fixed;
+    height: 700px;
+    margin-top: -11px;
+}
+
+.title {
+    position: absolute;
+    margin-top: 300px; 
+    font-size: 128px;
+    margin-left: 388px;
+    text-align: center;
+    color: rgb(61, 43, 31);
+    font-family: cursive;
+}
+.subTitle {
+    position: absolute;
+    margin-top: 460px; 
+    font-size: 51px;
+    margin-left: 482px;
+    text-align: center;
+    color: rgb(61, 43, 31);
+    font-family: cursive;
 }
 
 .menu {
     position: fixed;
-    width: 101%;
+    width: 106%;
     top: -16px;
     z-index: 10;
-}
-
-nav ul {
-    text-align: center;
     background-color: rgb(61, 43, 31);
     height: 70px;
+    text-align: center;
+    margin-left: -75px;
 }
 
-li {
+a li{
     color: white;
     text-decoration: none;
     display: inline-block;
     font-size: 17px;
-    font-family: Arial Black;
     margin: 0 20px;
-    margin-top: inherit;
+    margin-top: 16px;
+    font-family: sans-serif;
 }
-li:hover {
+a li:hover {
     color: burlywood;
-    transition: 2s;
+    transition: 1s;
 }
-
 
 div {
     position: absolute;
 }
 
-
-.title {
+.backgroud-image {
+    width: 279%;   
+    height: 497px;
     position: absolute;
-    margin-top: 80px; 
-    font-size: 50px;
-    margin-left: 500px;
-    text-align: center;
-    color: white;
-}
-
-.backgroud-block1 {
-    width: 278%;   
-    height: 400px;
-    position: absolute;
-    margin-top: 545px;
+    margin-top: 620px;
 }
 
 .title-first-block {
     color: white;
     font-size: 40px;
     margin-left: 145px;
-    margin-top: 685px;
+    margin-top: 783px;
     position: relative;
     text-align: center;
 }
@@ -73,24 +84,34 @@ div {
 }
 
 .second-block {
-    margin-top: 945px;
+    margin-top: 1097px;
     text-align: center;
     width: 100%;
+    height: 700px;
     background-color: white;
 }
+
 .title-second-block {
-    margin-top: 91px;
+    margin-top: 131px;
     font-size: 30px;
-    margin-left: 160px;
+    margin-left: 47px;
 }
 
-.sencond-discription {
-    margin-left: 150px;
+.border {
+    position: inherit; 
+    width: 238px;
+    height: 265px;
+    margin-top: -134px;
+    margin-left: -90px
+}
+
+.discription-sencond-block {
+    margin-top: 92px;
 }
 
 .hug-images {
     display: inline-block;
-    margin-top: 120px;
+    margin-top: 50px;
     position: initial;
     margin-left: 169px;
 }
@@ -99,21 +120,21 @@ div {
     height: 187px;
 }
 
-.backgroud-block3 {
-    width: 109%;   
-    height: 600px;
+.backgroud-image-block-3 {
+    width: 110%;   
+    height: 628px;
     position: absolute;
-    margin-top: 1493px;
+    margin-top: 1796px;
 }
 .title-third-block {
-    margin-top: 1571px;
+    margin-top: 1908px;
     color: gray;
     font-size: 30px;
     margin-left: 160px;
     position: relative;
 }
 
-.third-discription {
+.discription-third-block {
     position: absolute;
     margin-left: 150px;
     margin-top: 60px;
@@ -122,55 +143,44 @@ div {
     text-align: justify;
 }
 
-.daniela {
+.chef-image {
     margin-left: 835px;
     position: relative;
     width: 400px;
     height: 400px;
-    margin-top: -25px;
+    margin-top: -64px;
+}
+
+.images-brigadeiros {
+    position: absolute;
+    margin-top: 2422px;
+    width: 100%
 }
 
 .hug-images-block4 {
     display: inline-block;
     position: initial;
-    /*opacity: 0.8;*/
 }
 
 .three-images-block4 {
-    width: 454px;
+    width: 463px;
     height: 467px;
-}
-
-.reference {
-    position: initial;
-    margin-top: 89px;
-    display: inline-block;
-    width: 1333px;
-
-}
-
-.image2 {
-    margin-left: -16px;
-}
-
-.image3 {
-    margin-left: -21px;
+    margin-left: -16px
 }
 
 footer {
     position: absolute;
     background-color: rgb(61, 43, 31);
-    height: 300px;
+    height: 450px;
     width: 101%;
-    margin-top: -4px;
-
+    margin-top: 2857px;
 }
 
 .text-footer {
     font-size: 23px;
     color: white;
     margin-left: -611px;
-    margin-top: 55px;
+    margin-top: 147px;
     text-align: center;
 }
 
@@ -188,19 +198,19 @@ footer {
     margin-top: -166px;
 }
 
-.dados {
+.contact {
     background-color: burlywood;
     height: 21px;
     width: 330px;
 }
 
-.dados-mensagem {
+.message {
     background-color: burlywood;
     height: 70px;
     width: 330px;
 }
 
-.botao {
+.button {
     margin-left: 268px;
 }
 
@@ -209,7 +219,7 @@ footer {
     background-color: rgb(61, 43, 31);
     height: 53px;
     width: 100%;
-    margin-top: 16px;
+    margin-top: 74px;
 }
 
 .copyright-footer-text {
